--- a/home.html
+++ b/home.html
@@ -1,9 +1,12 @@
 #developed by 
 #Date:
 
+
 <html>
   <title> Learn Git </title>
 <body>
-  
+ <p> Indium makes technology work</p>
+
+
 </body>
 </html>
