added anchor tag

--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
   <title> Learn Git </title>
 <body>
  <p> Indium makes technology work</p>
+<a href="www.indium.com> To know about Inidum click here </a>
 
 
 </body>
